# wlr-which-key

./: Cargo.toml
src/: config.rs  key.rs  main.rs  menu.rs
src/config/: anchor.rs  compat.rs
