[package]
name = "wlr-which-key"
version = "1.3.0"
edition = "2024"
description = "Keymap manager for wlroots-based compositors"
repository = "https://github.com/MaxVerevkin/wlr-which-key/"
readme = "README.md"
license = "GPL-3.0-only"
authors = ["MaxVerevkin <maxxverr@gmail.com>"]

[dependencies]
pangocairo = "0.20"
anyhow = "1"
libc = "0.2"
indexmap = { version = "2.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
smart-default = "0.7.0"
smithay-client-toolkit = "0.19.2"
wayland-client = "0.31.1"
clap = { version = "4.3.0", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
] }

[profile.release]
lto = "fat"
